[package]
name = "apachetop"
version = "0.1.0"
authors = ["Chris Elsworth <chris@cae.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3"
crossbeam-channel = "0.4.0"
log = "0.4"
fern = "0.5"
chrono = "0.4.13"
bstr = "0.2.13"
regex = "1.3.9"
lazy_static = "1.4.0"
log-panics = "2.0.0"
strum = "0.18.0"
strum_macros = "0.18.0"
crossterm = "0.17.6"
lazysort = "0.2.1"
